removed erroneous touch usage

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
            // TODO: Actually do this... :') 
            
            // cat
-           // dependencies: touch
+           // dependencies: 
            function cat_a() {
                // Error checking
                if(flags_b) return [ERROR.INVALID_FLAGS, null];
@@ -281,13 +281,12 @@
                        xhttp.send(null);
                    }
                ret_str += "";
-               touch(args[i]);
                }
                return [ERROR.NO_ERROR, ret_str];
            }
 
            // evince 
-           // dependencies: touch
+           // dependencies:
            function evince_a() {
                if(flags_b) return [ERROR.INVALID_FLAGS, null];
                var len = args_len();
@@ -296,7 +295,6 @@
                for(var i = 0; i < currentdir.items.length; i++) {
                    var name = currentdir.items[i].name;
                    if(args[0] == name) {
-                       touch(name);
                        window.open(name);
                        return [ERROR.NO_ERROR, null];
                    } 
