--- a/index.html
+++ b/index.html
@@ -232,23 +232,27 @@
                return [{msg: command + ": invalid number of arguments, "+ args_num + ", expected " + args_num_e, className:"jquery-console-message-value"}]; }
            var invalid_filepath = function(command, filepath) {
                return [{msg: command + ": invalid filepath(s), "+ filepath, className:"jquery-console-message-value"}]; }
+           var command_not_supported = funciton(command) {
+               return [{msg: "the " + command + " command is not supported by your browser", className:"jquery-console-message-value"}]; }
            var return_message = function(msg) { 
                return [{msg:msg,className:"jquery-console-message-value"}]; }
 
            // ERRORS ENUM
            var ERROR = {
-               NO_ERROR         : 0,    
-               INVALID_FLAGS    : 1,
-               INVALID_ARGS     : 2,
-               INVALID_ARGS_NUM : 3,
-               INVALID_FILEPATH : 4,
+               NO_ERROR              : 0,    
+               INVALID_FLAGS         : 1,
+               INVALID_ARGS          : 2,
+               INVALID_ARGS_NUM      : 3,
+               INVALID_FILEPATH      : 4,
+               COMMAND_NOT_SUPPORTED : 5,
            }
 
            function error_handler(code, command, flags, args, args_num_e, args_num=args_len(), filepath="") {
-               if(code == ERROR.INVALID_FLAGS)    return invalid_flags    (command, flags);
-               if(code == ERROR.INVALID_ARGS)     return invalid_args     (command, args);
-               if(code == ERROR.INVALID_ARGS_NUM) return invalid_args_num (command, args_num, args_num_e);
-               if(code == ERROR.INVALID_FILEPATH) return invalid_filepath (command, filepath);
+               if(code == ERROR.INVALID_FLAGS)        return invalid_flags         (command, flags);
+               if(code == ERROR.INVALID_ARGS)         return invalid_args          (command, args);
+               if(code == ERROR.INVALID_ARGS_NUM)     return invalid_args_num      (command, args_num, args_num_e);
+               if(code == ERROR.INVALID_FILEPATH)     return invalid_filepath      (command, filepath);
+               if(code == ERROR.COMMAND_NOT_SUPPORTED return command_not_supported (command);
                return return_message("");
            }
 
