added secret.txt etc.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
            var Edu     = new Item("education.txt", "1337");
            var Hey     = new Item("hey.txt", "775");
            var home    = new Item("~", true);
-           var secret  = new Item("secret.txt", sizepad(0), true, "", false, "tomg.io", "user", "6", "0", "0");
+           var secret  = new Item("secret.txt", "82", false, "", false, "tomg.io", "user", "6", "0", "0");
 
            home.items.push(Contact); // Put Contact.txt in the home directory.
            home.items.push(CV); // Put our CV in the home directory.
